# oauth-compliance-suite-python

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
compliance_suite/: pyproject.toml
compliance_suite/src/compliance_suite/: __init__.py
compliance_suite/tests/: conftest.py  test_authorization_basics.py  test_authorization_decision.py  test_authorization_errors.py  test_authorization_interaction.py  test_credential_endpoint.py  test_credential_issuer_metadata.py  test_federation_configuration.py  test_federation_registration.py  test_grant_management.py  test_introspection.py  test_jwt_issuer_metadata.py  test_metadata.py  test_par.py  test_register.py  test_revocation.py  test_token_exchange.py  test_userinfo.py
python_oauth_server/: main.py  pyproject.toml  sdk_compat_patch.py
python_oauth_server/api/: authorization.py  authorization_decision.py  credential.py  credential_issuer_metadata.py  federation_configuration.py  federation_registration.py  gm.py  introspection.py  jwt_issuer_metadata.py  metadata.py  par.py  register.py  revocation.py  token.py  userinfo.py
python_oauth_server/db/: resource_server_dao.py  user_dao.py
python_oauth_server/resources/: resource_servers.json  users.json
python_oauth_server/templates/: authorization.html
