[project]
name = "compliance-suite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Harry5174", email = "harisjaved010@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
